[package]
name = "tinted-cargo-ebuild"
version = "0.0.1"
license = "MIT/Apache-2.0"
edition = "2021"
repository = "https://github.com/theoparis/cargo-ebuild"
readme = "README.md"
keywords = ["cargo-subcommand", "ebuild", "gentoo"]
categories = ["command-line-utilities"]
description = """
Generates an ebuild for a package using the in-tree eclasses.
"""

[[bin]]
name = "cargo-ebuild"
path = "src/main.rs"

[lib]
name = "cargo_ebuild"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.91"
cargo-lock = "10.0.1"
cargo_metadata = "0.18.1"
itertools = "0.13.0"
# TODO: Not released yet: https://github.com/rustsec/rustsec/pull/1270
rustsec = { git = "https://github.com/rustsec/rustsec" }
structopt = "0.3.26"
time = "0.3.36"

[dependencies.phf]
version = "0.11.2"
features = ["macros"]

[dependencies.serde]
version = "1.0.213"
features = ["derive"]

[dependencies.tera]
version = "1.20.0"
default-features = false

[features]
